--- a/YY-HB/oder.v1.0/oder.v1.0/manifest.json
+++ b/YY-HB/oder.v1.0/oder.v1.0/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "移移商户",
-    "appid" : "__UNI__80DC7F1",
+    "appid" : "__UNI__3B07E8D",
     "description" : "",
     "versionName" : "1.0.1",
     "versionCode" : 101,
@@ -22,7 +22,8 @@
             "Push" : {},
             "Geolocation" : {},
             "OAuth" : {},
-            "Payment" : {}
+            "Payment" : {},
+            "Bluetooth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -35,6 +36,8 @@
                     "<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
+                    "<uses-permission android:name=\"android.permission.BLUETOOTH\"/>",
+                    "<uses-permission android:name=\"android.permission.BLUETOOTH_ADMIN\"/>",
                     "<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
                     "<uses-permission android:name=\"android.permission.CAMERA\"/>",
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
@@ -53,7 +56,9 @@
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>",
+                    "<uses-permission android:name=\"android.permission.BLUETOOTH\"/>",
+                    "<uses-permission android:name=\"android.permission.BLUETOOTH_ADMIN\"/>"
                 ],
                 "abiFilters" : [ "armeabi-v7a" ],
                 "permissionExternalStorage" : {
