app请求修改，库存对比信息完善，商家下单显示bug修复，在售下架留在当前小类

--- a/YY-HB/oder.v1.0/oder.v1.0/manifest.json
+++ b/YY-HB/oder.v1.0/oder.v1.0/manifest.json
@@ -1,9 +1,9 @@
 {
     "name" : "移移商家",
-    "appid" : "__UNI__3B07E8D",
+    "appid" : "__UNI__80DC7F1",
     "description" : "",
-    "versionName" : "1.0.1",
-    "versionCode" : 101,
+    "versionName" : "1.5.7",
+    "versionCode" : 157,
     "transformPx" : false,
     /* 5+App特有相关 */
     "app-plus" : {
